# minih-livekit

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json
agent/: .dockerignore  .env.template  Dockerfile  main.py  pyproject.toml
agent/src/: __init__.py
agent/src/core/: agent_impl.py  session.py
agent/src/plugins/: llm.py  stt.py  tts.py
agent/src/services/: asr.py  database.py  llm.py  recorder.py  sip_setup.py  token_server.py  tts.py  vad.py
app/: nginx.conf  package-lock.json  package.json  rsbuild.config.ts
app/src/: App.css  App.tsx  index.css  index.html  index.tsx
app/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src/api/: token.ts
docs/: architecture.md  design.md  implementation_plan.md  progress.md  tech-stack.md  tts-doc.md
server/: docker-compose.yaml  livekit.yaml  sip.yaml
